versioned_docs/version-3.0.0/running-keploy/best-practices-api-testing.md
---
id: best-practices-api-testing
title: Best Practices for API testing
sidebar_label: Best Practices
description: This section documents what best practices can be followed while performing API testing
tags:
  - API testing
  - API mocks
  - generate test cases
  - test automation
  - Best Practices
keywords:
  - api testing
  - api mocks
  - automated testing
  - ai testing
  - keploy
  - Gemini
  - OpenAI
---

## 🛠️ Best Practices in API Testing

API testing ensures the reliability, security, and performance of your application's backend services. To build robust, scalable test suites, here are the best practices you should follow:

### ✅ 1. Define Clear Test Objectives

- Understand what you're testing—functionality, security, performance, or error handling.
- Align tests with business logic and expected user workflows.

### 🧪 2. Cover Both Positive and Negative Scenarios

- Validate how the API responds to correct input.
- Intentionally send malformed, missing, or unauthorized requests to verify error handling and status codes.

### 🔄 3. Automate Repetitive Tests

- Integrate API tests into your CI/CD pipeline.
- Automate regression tests for each deployment or commit.

## 🗃️ 4. Use Data-Driven Testing

- Store request and response data externally (e.g., JSON files or CSV).
- This keeps test logic clean and improves reusability.

## 🔐 5. Test Authentication and Authorization

- Validate token generation, expiration, and refresh flows.
- Confirm users cannot access resources outside their scope.

### 🕒 6. Measure Performance and Response Times

- Ensure APIs meet SLAs under normal and load conditions.
- Monitor response time, throughput, and error rates.

## 🧩 7. Validate Response Structure and Schema

- Check if all fields exist and are in the correct format (JSON schema validation).
- Flag any unexpected keys or missing data.

### 🌍 8. Handle Environment Configurations

- Avoid hardcoding endpoints and credentials.
- Use environment variables or configuration files for flexibility across dev, staging, and prod.

### 📦 9. Use Mocks and Stubs When Needed

- Isolate APIs under test from third-party dependencies.
- Simulate edge cases or failure scenarios not easily reproducible in production.

### 📈 10. Track and Version API Tests

- Keep your API test suite in version control (e.g., Git).
- Ensure tests are updated as the API evolves (versioning, deprecations).

### 🔁 11. Chain Requests for Workflow Validation

- Simulate real-world flows (e.g., user signup → login → perform action).
- Maintain session or token data across calls.

### 📊 12. Add Clear Logging and Reporting

- Output test name, request payload, status code, and failure reason.
- Use structured reports for better traceability in CI/CD tools.
